# rust-lightning-bitcoinrpc

./: .gitignore  .travis.yml  Dockerfile  README.md
ln-manager/: Cargo.toml
ln-manager/src/: lib.rs
ln-manager/src/ln_bridge/: chain_monitor.rs  channel_manager.rs  connection.rs  event_handler.rs
ln-manager/src/ln_cmd/: channel.rs  invoice.rs  peer.rs
server/: Cargo.toml
server/src/: main.rs
server/src/ln_cmd/tasks/: ln_mgr.rs  mod.rs  udp_srv.rs
server/src/ln_cmd/utils/: mod.rs
server/src/ln_node/: mod.rs
test/integration/: docker-compose.yml  main.py
