[package]
name = "ln-manager"
version = "0.0.1"
authors = ["Matt Corallo <git@bluematt.me>"]
build = "build.rs"
edition = "2018"

[dependencies]
bitcoin = "0.21"
bitcoin-bech32 = "0.7"
bitcoin_hashes = "0.7"
lightning = { git = "https://github.com/rust-bitcoin/rust-lightning.git", branch = "master" }
lightning-invoice = { git = "https://github.com/knarfytrebil/rust-lightning-invoice.git" }
secp256k1 = "0.15"
hyper = { version = "0.13.0-alpha.4", default-features = false, features = ["unstable-stream", "tcp"] }
tokio-io = "0.2.0-alpha.6"
tokio-fs = "0.2.0-alpha.6"
tokio-util = { version = "0.2.0-alpha.6", features = ["codec"] }
tokio-codec = "0.2.0-alpha.6"
tokio-net = { version = "0.2.0-alpha.6", features = ["async-traits"] }
# tokio = "0.2.0-alpha.6"
tokio = { version = "0.2.4", features = ["net", "time", "stream"] }
futures-timer = "0.4.0"
futures = { package = "futures-preview", version = "0.3.0-alpha.19" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.4"
bytes = "0.4"
# bytes = { version = "0.4" }
# bytes = "0.5.3"
base64 = "0.9"
num-derive = "0.2"
num-traits = "0.2"
config = "0.9.2"
log = "0.4"
failure = "0.1.5"

[build-dependencies]
cc = "1.0.35"
