[package]
name = "rustbolt"
version = "0.0.1"
authors = ["Matt Corallo <git@bluematt.me>"]
build = "build.rs"
edition = "2018"

[dependencies]
bitcoin = "0.21"
lightning = { git = "https://github.com/rust-bitcoin/rust-lightning.git", branch = "master" }
lightning-invoice = { git = "https://github.com/knarfytrebil/rust-lightning-invoice.git" }
hyper = "=0.13.0-alpha.4"
futures = { package = "futures-preview", version = "0.3.0-alpha.19" }
serde = "1"
serde_json = "1"
serde_derive = "1"
rand = "0.4"
bytes = "0.4"
base64 = "0.9"
num-derive = "0.2"
num-traits = "0.2"
config = "0.9.2"
log = "0.4"
simplelog = "^0.6.0"
tokio = { version = "=0.2.0-alpha.6" }
ln-manager = { path = "../ln-manager" }
protocol = { path = "../protocol" }
failure = "0.1.5"

[build-dependencies]
cc = "1.0.35"
